# smartwatts-formula

./: .codecov.yml  .dockerignore  .flake8  .gitignore  .pylintrc  .ruff.toml  CITATION.cff  Dockerfile  Dockerfile-cpython  Dockerfile-pypy  LICENSE  README.md  auto_config.sh  contributing.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/chglog/: config.yml
.github/workflows/: build.yml  codeql.yml  lint_and_test.yml  release.yml  release_ci.yml
deploy/docker/: .env  README.md  docker-compose.yaml
deploy/docker/formula/: smartwatts-mongodb-csv.json  smartwatts-mongodb-prometheus.json  smartwatts-socket-csv.json  smartwatts-socket-influxdb2.json  smartwatts-socket-mongodb.json  smartwatts-socket-prometheus.json
smartwatts/: __init__.py  __main__.py  actor.py  cloudjoule_exporter.py  configuration.py  context.py  dispatcher.py  exception.py  formula.py  handler.py  k8sapi.py  smartwatts_dispatcher_actor.py  smartwatts_formula_actor.py  smartwatts_handlers.py  topology.py
smartwatts/actor/: __init__.py  actor.py  config.py
smartwatts/cli/: __init__.py  config_validator.py
smartwatts/handler/: __init__.py  hwpc_report.py
smartwatts/model/: __init__.py  cpu_topology.py  power_model.py  report_history.py
smartwatts/report/: __init__.py  formula_report.py
smartwatts/test_utils/: reports.py
src/smartwatts/: __init__.py  __main__.py  exception.py  exceptions.py
src/smartwatts/actor/: __init__.py  actor.py  config.py  factory.py
src/smartwatts/cli/: __init__.py  config_validator.py
src/smartwatts/handler/: __init__.py  hwpc_report.py
src/smartwatts/model/: __init__.py  cpu_topology.py  frequency_layer.py  power_model.py  report_history.py  sample_history.py
test/: hwpc_reports.py  mongo_utils.py
test/acceptation/: test_hwpc_report_with_mperf_to_zero_must_not_crash_the_system.py  test_normal_behaviour.py  test_rapl_report_without_hwpc_report_must_not_make_formula_crash.py
tests/acceptation/: acceptation_test_utils.py  test_cloudjoule_exporter.py  test_configuration.py  test_hwpc_report_with_mperf_to_zero_must_not_crash_the_system.py  test_k8s.py  test_normal_behaviour.py
tests/unit/model/: test_cpu_topology.py  test_power_model.py  test_report_history.py
tests/utils/: acceptation.py  reports.py
tests/utils/db/: __init__.py  mongo.py
