[metadata]
name = smartwatts
version = attr: smartwatts.__version__
description = SmartWatts is a formula for a self-adaptive software-defined power meter based on the PowerAPI framework.
long_description = file: README.md, LICENSE
keywords = energy, powerapi, containers, performance counters, power meter
author = Guillaume Fieni
license = GNU Affero General Public License v3
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU Affero General Public License v3
    Framework :: PowerAPI
    Framework :: PowerAPI :: Formula

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages = find:
install_requires =
    powerapi [mongodb, influxdb, opentsdb, prometheus] >= 0.10.0
    scikit-learn
