[metadata]
name = smartwatts
version = attr: smartwatts.__version__
description = SmartWatts is a formula for a self-adaptive software-defined power meter based on the PowerAPI framework.
long_description = file: README.md
keywords = energy, powerapi, containers, performance counters, power meter
author = Guillaume Fieni
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
test_suite = tests
setup_requires =
    pytest-runner >=3.9.2
install_requires =
    powerapi [mongodb, influxdb, opentsdb, prometheus, influxdb_client] >= 2.0.0

    scikit-learn
tests_require =
    pytest >=3.9.2
    pytest-asyncio >=0.14.0
    pytest-timeout >= 1.4.2
